# vastkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: deploy_lua_flux.sh
tests/: test_cli.py  test_models.py  test_query.py  test_ranking.py  test_remote.py
vastkit/: __init__.py  api.py  cli.py  lifecycle.py  models.py  query.py  ranking.py  remote.py
