[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vastkit"
version = "0.1.0"
description = "Search, rent and drive GPU servers on Vast.ai — a zero-dependency CLI and Python toolkit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Aleksandr Razin" }]
requires-python = ">=3.9"
dependencies = []
keywords = ["vast.ai", "gpu", "cloud", "rental", "machine-learning", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/RazinAleksandr/vastkit"
Issues = "https://github.com/RazinAleksandr/vastkit/issues"

[project.scripts]
vastkit = "vastkit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["vastkit*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["UP006", "UP007", "UP035", "UP045"]  # keep typing.Optional/List for 3.9 clarity
